src/objects/Component__c.object
<CustomObject>
    <description>BME - A component represents a bundle of code that makes logical sense to move (from org to org) together. The component object can be associated to Work Packages, which will allow developers to see what code bundles support what functionality and can be used to identify dependencies between components and track migration. This object is only in the Full version.</description>
    <fields>
        <fullName>Dependency_Details__c</fullName>
        <label>Dependency Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Migrated_On__c</fullName>
        <label>Last Migrated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Migrated_To__c</fullName>
        <label>Last Migrated To</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to identify if the component is related, or dependent on another component. Enter more details in the Dependency Details field.</description>
        <label>Related Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Related Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>AllComponents</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Last_Migrated_On__c</columns>
        <columns>Last_Migrated_To__c</columns>
        <columns>Work_Package__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Components</label>
    </listViews>
    <listViews>
        <fullName>My_Components</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Last_Migrated_On__c</columns>
        <columns>Last_Migrated_To__c</columns>
        <columns>Work_Package__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Components</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>